--- a/NEUEvents/Base.lproj/Main.storyboard
+++ b/NEUEvents/Base.lproj/Main.storyboard
@@ -132,7 +132,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Vuv-E4-Urz" kind="custom" id="9UW-EZ-chS"/>
+                                    <segue destination="Vuv-E4-Urz" kind="custom" identifier="ShowEventSegue" customClass="ShowEventSegue" customModule="NEUEvents" customModuleProvider="target" id="9UW-EZ-chS"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -182,10 +182,10 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="AYz-CT-d2f" customClass="ImageCollectionViewCell" customModule="NEUEvents" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="29.333333333333332" width="128" height="127.99999999999997"/>
+                                                <rect key="frame" x="0.0" y="29.333333333333332" width="128" height="127.99999999999999"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rvt-kS-1j0">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="127.99999999999997"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="127.99999999999999"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dCA-Jv-ZR6">
