--- a/NEUEvents/Base.lproj/Main.storyboard
+++ b/NEUEvents/Base.lproj/Main.storyboard
@@ -226,7 +226,21 @@
                             <outlet property="delegate" destination="ZAe-3M-RzD" id="HaX-MM-rdh"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Kcg-Nf-BWe"/>
+                    <toolbarItems>
+                        <barButtonItem title="sort" image="arrow.up.arrow.down" catalog="system" id="oGD-7Z-nF5">
+                            <connections>
+                                <action selector="onSortButtonTapped:" destination="v5e-jY-OMr" id="cEJ-Jy-4gW"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="Kcg-Nf-BWe">
+                        <barButtonItem key="rightBarButtonItem" title="sort" image="arrow.up.arrow.down" catalog="system" id="wPK-xd-Rgd">
+                            <connections>
+                                <action selector="onSortButtonTapped:" destination="ZAe-3M-RzD" id="W21-bY-8qc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YVv-P6-DsR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -378,7 +392,11 @@
                                     <segue destination="Vuv-E4-Urz" kind="show" id="3CD-to-rFJ"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="sort" image="arrow.up.arrow.down" catalog="system" id="069-2A-At5"/>
+                            <barButtonItem title="sort" image="arrow.up.arrow.down" catalog="system" id="069-2A-At5">
+                                <connections>
+                                    <action selector="onSortButtonTapped:" destination="v5e-jY-OMr" id="BcT-v0-Hp1"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                 </tableViewController>
@@ -408,10 +426,10 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="AYz-CT-d2f" customClass="ImageCollectionViewCell" customModule="NEUEvents" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="29.333333333333332" width="128" height="127.99999999999997"/>
+                                                <rect key="frame" x="0.0" y="29.333333333333332" width="128" height="127.99999999999999"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rvt-kS-1j0">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="127.99999999999997"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="127.99999999999999"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dCA-Jv-ZR6">
